Bump z-index of header to fix dropdown menu. Fixes TMP-6683

--- a/styles/header.less
+++ b/styles/header.less
@@ -116,7 +116,7 @@
     // I would like the z-index here to be 3,
     // but anything below 10 makes the tweak
     // overlay unclickable.
-    z-index: 10;
+    z-index: 1000;
     width: 100%;
     .font-smoothing(@tweak-overlay-color);
   }
